<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="-201dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/supply_temp_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:labelFor="@id/supply_temp_edit"
                android:text="@string/supply_temp_tv_text"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/supply_temp_edit"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/edit_text_selector"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:padding="5dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/return_temp_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:labelFor="@id/return_temp_edit"
                android:text="@string/return_temp_tv_text"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/return_temp_edit"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/edit_text_selector"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:padding="5dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/heat_capacity_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:labelFor="@id/heat_capacity_edit"
                android:text="@string/heat_capacity_tv_text" />

            <EditText
                android:id="@+id/heat_capacity_edit"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/edit_text_selector"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:padding="5dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/volume_flow_m3h_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:labelFor="@id/volume_flow_m3h_edit"
                android:text="@string/volume_flow_m3h_tv_text" />

            <EditText
                android:id="@+id/volume_flow_m3h_edit"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/edit_text_selector"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:padding="5dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/volume_flow_m3s_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:labelFor="@id/volume_flow_m3s_edit"
                android:text="@string/volume_flow_m3s_tv_text" />

            <EditText
                android:id="@+id/volume_flow_m3s_edit"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/edit_text_selector"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:padding="5dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/volume_flow_lh_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:labelFor="@id/volume_flow_lh_edit"
                android:text="@string/volume_flow_lh_tv_text" />

            <EditText
                android:id="@+id/volume_flow_lh_edit"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/edit_text_selector"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:padding="5dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/volume_flow_ls_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:labelFor="@id/volume_flow_ls_edit"
                android:text="@string/volume_flow_ls_tv_text" />

            <EditText
                android:id="@+id/volume_flow_ls_edit"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/edit_text_selector"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:padding="5dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/mass_flow_kgh_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:labelFor="@id/mass_flow_kgh_edit"
                android:text="@string/mass_flow_kgh_tv_text" />

            <EditText
                android:id="@+id/mass_flow_kgh_edit"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/edit_text_selector"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:padding="5dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/mass_flow_kgs_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:labelFor="@id/mass_flow_kgs_edit"
                android:text="@string/mass_flow_kgs_tv_text" />

            <EditText
                android:id="@+id/mass_flow_kgs_edit"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/edit_text_selector"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:padding="5dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/outer_diameter_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:labelFor="@id/outer_diameter_edit"
                android:text="@string/outer_diameter_tv_text" />

            <EditText
                android:id="@+id/outer_diameter_edit"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/edit_text_selector"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:padding="5dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/wall_thickness_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:labelFor="@id/wall_thickness_edit"
                android:text="@string/wall_thickness_tv_text" />

            <EditText
                android:id="@+id/wall_thickness_edit"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/edit_text_selector"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:padding="5dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/roughness_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:labelFor="@id/roughness_edit"
                android:text="@string/roughness_tv_text" />

            <EditText
                android:id="@+id/roughness_edit"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/edit_text_selector"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:padding="5dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/fluid_velocity_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/fluid_velocity_tv_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fluid_velocity_result_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/pressure_drop_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/pressure_drop_tv_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/pressure_drop_result_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:textSize="18sp"
                android:textStyle="bold" />

                <TextView
                    android:id="@+id/specific_heat_capacity_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/specific_heat_capacity_tv_text"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/specific_heat_capacity_result_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            <TextView
                android:id="@+id/density_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/density_tv_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/density_result_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/viscosity_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/viscosity_tv_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/viscosity_result_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/friction_coefficient_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/friction_coefficient_tv_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/friction_coefficient_result_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:textSize="18sp"
                android:textStyle="bold" />


            <Button
                android:id="@+id/calc_btn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/teal_darker"
                android:paddingStart="8dp"
                android:paddingTop="8dp"
                android:paddingEnd="8dp"
                android:paddingBottom="8dp"
                android:text="@string/calc_btn_text"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:icon="@drawable/calc_icon"
                app:iconGravity="textStart"
                app:iconTint="@color/white" />

            <Button
                android:id="@+id/clear_btn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/teal_darker"
                android:drawableStart="@drawable/clear_icon"
                android:paddingStart="8dp"
                android:paddingTop="8dp"
                android:paddingEnd="8dp"
                android:paddingBottom="8dp"
                android:text="@string/clear_btn_text"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:icon="@drawable/clear_icon"
                app:iconGravity="textStart"
                app:iconTint="@color/white" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>